Alter focus input css Adding reserved space in form for error messages Creating Event Controller class Adding an helper for cpf validation Create a Validation Class

--- a/app/src/styles/components/_input.scss
+++ b/app/src/styles/components/_input.scss
@@ -21,7 +21,9 @@
             transition: all .2s ease-out;
         }
         
-        &:focus{
+        &:focus, 
+        &.has-value
+        {
             outline: none;
             border-width:1px;
             border-color:$focus;
@@ -36,8 +38,13 @@
             font-size:12px;
         }
         &.has-value:not(:focus) + label{
-            color:$default;
+            color:$focus;
         }        
         
+    }
+
+    .error-message{
+        font-family:Roboto, sans-serif;
+        color: red;
     }
 }
