Basic adjustment on validation and data storage

--- a/app/src/styles/base/_colors.scss
+++ b/app/src/styles/base/_colors.scss
@@ -1,9 +1,10 @@
-$default: #efeeed;
-$focus: #333333;
-$error: #eb4a46;
+$default : #efeeed;
+$focus   : #333333;
+$error   : #eb4a46;
 
 // Button
 
-$defaultBtn: #ffffff;
-$disableBtn: #dddcdc;
-$backgroundBtn: #00c8b3;
+$defaultBtn        : #ffffff;
+$disableBtnfont    : #dddcdc;
+$backgroundBtn     : #00c8b3;
+$disableBackgroung : #f6f6f6;
