--- a/app/src/styles/base/_fonts.scss
+++ b/app/src/styles/base/_fonts.scss
@@ -1,1 +1,34 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?oxpypg');
+  src:  url('../fonts/icomoon.eot?oxpypg#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?oxpypg') format('truetype'),
+    url('../fonts/icomoon.woff?oxpypg') format('woff'),
+    url('../fonts/icomoon.svg?oxpypg#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-pencil:before {
+  content: "\e905";
+}
+.icon-cancel-circle:before {
+  content: "\ea0d";
+}
